Setting Up :sparkles:

--- a/Proyecto1_SSOO_Martinez_Spiotta/nbproject/project.properties
+++ b/Proyecto1_SSOO_Martinez_Spiotta/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Proyecto1_SSOO_Martinez_Spiotta
-main.class=proyecto1_ssoo_martinez_spiotta.Proyecto1_SSOO_Martinez_Spiotta
+main.class=Clases.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
