--- a/Proyecto1_SSOO_Martinez_Spiotta/nbproject/project.properties
+++ b/Proyecto1_SSOO_Martinez_Spiotta/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Proyecto1_SSOO_Martinez_Spiotta
+application.vendor=fabriziospiotta
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +33,15 @@ dist.jar=${dist.dir}/Proyecto1_SSOO_Martinez_Spiotta.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Proyecto1_SSOO_Martinez_Spiotta
+endorsed.classpath=
 excludes=
+file.reference.jcommon-1.0.23.jar=/Users/fabriziospiotta/Desktop/jfreechart-1.0.19/lib/jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=/Users/fabriziospiotta/Desktop/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -75,7 +81,7 @@ main.class=Clases.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_19
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
