--- a/Proyecto1_SSOO_Martinez_Spiotta/nbproject/private/private.properties
+++ b/Proyecto1_SSOO_Martinez_Spiotta/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=/Users/fabriziospiotta/Library/Application Support/NetBeans/20/build.properties
+user.properties.file=C:\\Users\\mariv\\AppData\\Roaming\\NetBeans\\18\\build.properties
