--- a/Proyecto1_SSOO_Martinez_Spiotta/nbproject/project.properties
+++ b/Proyecto1_SSOO_Martinez_Spiotta/nbproject/project.properties
@@ -41,7 +41,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -81,7 +82,7 @@ main.class=Clases.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_19
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
